--- a/shoppy-api/package.json
+++ b/shoppy-api/package.json
@@ -24,6 +24,7 @@
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.18.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "nestjs-pino": "^4.1.0",
@@ -47,6 +48,7 @@
     "jest": "^29.5.0",
     "pino-pretty": "^11.2.2",
     "prettier": "^3.0.0",
+    "prisma": "^5.18.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
